[gd_scene load_steps=19 format=3 uid="uid://brrn0tbcf45ra"]

[ext_resource type="Texture2D" uid="uid://c7fm2cceitkh0" path="res://Assets Cle├│patra/Cen├írios/Tileset/MapaBoss.jpg" id="1_bqyop"]
[ext_resource type="Script" uid="uid://c1hbg8ukoovhl" path="res://Cenas/end.gd" id="1_mh82j"]
[ext_resource type="Texture2D" uid="uid://ce2tsnj01ihbs" path="res://fundos/brancoarredondado.png" id="2_07ps1"]
[ext_resource type="Texture2D" uid="uid://cyjv8vqyjkuyi" path="res://Assets Cle├│patra/Personagens/Monstros/Monstro 2 (m├║mia)/Mummy.png" id="2_skube"]
[ext_resource type="Texture2D" uid="uid://jukolqsmrglo" path="res://fundos/branco.jpg" id="4_mh82j"]
[ext_resource type="Texture2D" uid="uid://btu245pahvriy" path="res://fundos/preta.jpg" id="5_6u81g"]
[ext_resource type="Texture2D" uid="uid://dsovlr358i3ek" path="res://Assets Cle├│patra/Personagens/Monstros/Explosion-removebg-preview.png" id="5_ta3jy"]
[ext_resource type="Texture2D" uid="uid://fkikx2fbqw2w" path="res://fundos/narrador.png" id="7_6u81g"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fcef0"]
atlas = ExtResource("2_skube")
region = Rect2(0, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vrnrb"]
atlas = ExtResource("2_skube")
region = Rect2(16, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b26vl"]
atlas = ExtResource("2_skube")
region = Rect2(32, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8oo5"]
atlas = ExtResource("2_skube")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t2bka"]
atlas = ExtResource("2_skube")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_41ero"]
atlas = ExtResource("2_skube")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_efl8c"]
atlas = ExtResource("2_skube")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dt20i"]
atlas = ExtResource("2_skube")
region = Rect2(64, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_dxg7t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcef0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vrnrb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b26vl")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8oo5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2bka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_41ero")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efl8c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dt20i")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_ta3jy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_ta3jy")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="end" type="Node2D"]
script = ExtResource("1_mh82j")

[node name="MapaBoss" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(1.0549451, 0.432)
texture = ExtResource("1_bqyop")

[node name="Brancoarredondado2" type="Sprite2D" parent="MapaBoss"]
position = Vector2(137.4479, 354.16663)
scale = Vector2(1.0277911, 0.84625244)
texture = ExtResource("2_07ps1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(203, 398)
scale = Vector2(26.867191, 31.859379)
sprite_frames = SubResource("SpriteFrames_dxg7t")
animation = &"attack"
autoplay = "idle"

[node name="Branco" type="Sprite2D" parent="."]
position = Vector2(649, 283)
scale = Vector2(0.32372713, 0.06637807)
texture = ExtResource("4_mh82j")

[node name="Preta2" type="Sprite2D" parent="."]
position = Vector2(647.87494, 332)
scale = Vector2(0.7561111, 0.18311039)
texture = ExtResource("5_6u81g")

[node name="Label4" type="Label" parent="."]
offset_left = 481.0
offset_top = 319.0
offset_right = 2105.0
offset_bottom = 490.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 23
text = "Explorador Veterano"

[node name="Label3" type="Label" parent="."]
offset_left = 498.0
offset_top = 258.0
offset_right = 2122.0
offset_bottom = 429.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
text = "Demétrio"

[node name="Label" type="Label" parent="."]
offset_left = 508.0
offset_top = 415.0
offset_right = 886.0
offset_bottom = 552.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30

[node name="Narrador2" type="Sprite2D" parent="."]
visible = false
position = Vector2(214.00002, 356)
scale = Vector2(0.045442924, 0.046365045)
texture = ExtResource("7_6u81g")

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(547, 412)
scale = Vector2(3.09, 3.108)
sprite_frames = SubResource("SpriteFrames_ta3jy")
