extends Node2D



# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	_derrota()


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
	
func _derrota():
	await get_tree().create_timer(0.1).timeout
	$Narrador2.show()
	$AnimatedSprite2D.hide()
	$Label3.text="Demétrio"
	$Label4.text="Explorador veterano"
	$Label.text="NÃOOOOOOOOOOOO"
	await get_tree().create_timer(0.1).timeout
	$Narrador2.hide()
	$AnimatedSprite2D.show()
	$Label3.text="Cleópatra"
	$Label4.text="Rainha da pirâmide"
	$Label.text= " "
	await get_tree().create_timer(0.1).timeout
	$Narrador2.show()
	$AnimatedSprite2D.hide()
	$Label3.text="Demétrio"
	$Label4.text="Explorador veterano"
	$Label.text="NÃOOOOOOOOOOOO"

	await get_tree().create_timer(0.1).timeout
	$Narrador2.hide()
	$AnimatedSprite2D.show()
	$Label3.text="Cleópatra"
	$Label4.text="Rainha da pirâmide"
	$Label.text= " "
	
	await get_tree().create_timer(0.1).timeout
	$Narrador2.show()
	$AnimatedSprite2D.hide()
	$Label3.text="Demétrio"
	$Label4.text="Explorador veterano"
	$Label.text="NÃOOOOOOOOOOOO"
	await get_tree().create_timer(0.1).timeout
	$Narrador2.hide()
	$AnimatedSprite2D.show()
	$Label3.text="Cleópatra"
	$Label4.text="Rainha da pirâmide"
	$Label.text= " "
	await get_tree().create_timer(0.1).timeout
	$Narrador2.show()
	$AnimatedSprite2D.hide()
	$Label3.text="Demétrio"
	$Label4.text="Explorador veterano"
	$Label.text="NÃOOOOOOOOOOOO"
	
	await get_tree().create_timer(0.1).timeout
	$Narrador2.hide()
	$AnimatedSprite2D.show()
	$Label3.text="Cleópatra"
	$Label4.text="Rainha da pirâmide"
	$Label.text= " "
	await get_tree().create_timer(0.1).timeout
	$Narrador2.show()
	$AnimatedSprite2D.hide()
	$Label3.text="Demétrio"
	$Label4.text="Explorador veterano"
	$Label.text="NÃOOOOOOOOOOOO"
	await get_tree().create_timer(0.1).timeout
	$Narrador2.hide()
	$AnimatedSprite2D.show()
	$Label3.text="Cleópatra"
	$Label4.text="Rainha da pirâmide"
	$Label.text= " "
	await get_tree().create_timer(0.1).timeout
	$Narrador2.show()
	$AnimatedSprite2D.hide()
	$Label3.text="Demétrio"
	$Label4.text="Explorador veterano"
	$Label.text="NÃOOOOOOOOOOOO"
	await get_tree().create_timer(0.1).timeout
	$Narrador2.hide()
	$AnimatedSprite2D.show()
	$Label3.text="Cleópatra"
	$Label4.text="Rainha da pirâmide"
	$Label.text= " "
	await get_tree().create_timer(0.1).timeout
	$Narrador2.show()
	$AnimatedSprite2D.hide()
	$Label3.text="Demétrio"
	$Label4.text="Explorador veterano"
	$Label.text="NÃOOOOOOOOOOOO"
	await get_tree().create_timer(0.1).timeout
	$Narrador2.hide()
	$AnimatedSprite2D.show()
	$Label3.text="Cleópatra"
	$Label4.text="Rainha da pirâmide"
	$Label.text= " "
	await get_tree().create_timer(0.1).timeout
	$Narrador2.show()
	$AnimatedSprite2D.hide()
	$Label3.text="Demétrio"
	$Label4.text="Explorador veterano"
	$Label.text="NÃOOOOOOOOOOOO"
	await get_tree().create_timer(0.1).timeout
	$Narrador2.hide()
	$AnimatedSprite2D.show()
	$Label3.text="Cleópatra"
	$Label4.text="Rainha da pirâmide"
	$Label.text= " "
	await get_tree().create_timer(0.1).timeout
	$Narrador2.show()
	$AnimatedSprite2D.hide()
	$Label3.text="Demétrio"
	$Label4.text="Explorador veterano"
	$Label.text="NÃOOOOOOOOOOOO"
	await get_tree().create_timer(0.1).timeout
	$Narrador2.hide()
	$AnimatedSprite2D.show()
	$Label3.text="Cleópatra"
	$Label4.text="Rainha da pirâmide"
	$Label.text= " "
	await get_tree().create_timer(0.1).timeout
	$Narrador2.show()
	$AnimatedSprite2D.hide()
	$Label3.text="Demétrio"
	$Label4.text="Explorador veterano"
	$Label.text="NÃOOOOOOOOOOOO"
	await get_tree().create_timer(0.1).timeout
	$Narrador2.hide()
	$AnimatedSprite2D.show()
	$Label3.text="Cleópatra"
	$Label4.text="Rainha da pirâmide"
	$Label.text= " "
	await get_tree().create_timer(0.1).timeout
	$Narrador2.show()
	$AnimatedSprite2D.hide()
	$Label3.text="Demétrio"
	$Label4.text="Explorador veterano"
	$Label.text="NÃOOOOOOOOOOOO"
	await get_tree().create_timer(0.1).timeout
	$Narrador2.hide()
	$AnimatedSprite2D.show()
	$Label3.text="Cleópatra"
	$Label4.text="Rainha da pirâmide"
	$Label.text=""
	$AnimatedSprite2D.hide()
	$AnimatedSprite2D2.show()
	await get_tree().create_timer(0.01).timeout
	$AnimatedSprite2D2.hide()
	await get_tree().create_timer(0.01).timeout
	$AnimatedSprite2D2.show()
	await get_tree().create_timer(0.01).timeout
	$AnimatedSprite2D2.hide()
	await get_tree().create_timer(0.01).timeout
	$AnimatedSprite2D2.show()
	await get_tree().create_timer(0.01).timeout
	$AnimatedSprite2D2.hide()
	await get_tree().create_timer(0.01).timeout
	$AnimatedSprite2D2.show()
	await get_tree().create_timer(0.01).timeout
	$AnimatedSprite2D2.hide()
	await get_tree().create_timer(0.01).timeout
	$AnimatedSprite2D2.show()
	await get_tree().create_timer(0.01).timeout
	$AnimatedSprite2D2.hide()
	await get_tree().create_timer(0.01).timeout
	$AnimatedSprite2D2.show()
	await get_tree().create_timer(0.01).timeout
	$AnimatedSprite2D2.hide()
	await get_tree().create_timer(0.01).timeout
	$AnimatedSprite2D2.show()
	$Label4.hide()
	$Label3.hide()
	$Branco.hide()
	$Preta2.hide()
	get_tree().change_scene_to_file("res://Cenas/fim.tscn")
	
	
	
	
	
